text-overflow fixed on closeInfo

--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,13 @@
 
 #root {
   font-family: Baloo 2;
+  overflow: hidden;
 }
 
 .font-link {
   font-family: 'Baloo 2', sans-serif;
 }
 
+* {
+  overflow: hidden;
+}
